--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,45 +7,47 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
+  #workflow_dispatch:
     
 jobs:
   build:
     runs-on: ubuntu-latest
-    # env:
-      # SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-    
     steps:
-    
-    - uses: actions/checkout@v2
-    
-    - uses: actions/cache@v1
+    - name: Checkout this repo
+      uses: actions/checkout@v3
+    - name: Cache dependencies
+      uses: actions/cache@v3
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.8
-    
-    - name: Print effective-settings (optional)
-      run: mvn help:effective-settings
-    
+        distribution: 'zulu'
+        java-version: 8
+    #- name: Add repo credentials
+      #uses: s4u/maven-settings-action@v2.6.0
+      #with:
+        #servers: |
+          #[{
+           #"id": "exchange",
+           #"username": "${{ secrets.anypoint_platform_username }}",
+           #"password": "${{ secrets.anypoint_platform_password }}"
+          #}]
+    #- name: Print effective-settings (optional)
+      #run: mvn help:effective-settings
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    
     - name: Stamp artifact file name with commit hash
       run: |
         artifactName1=$(ls target/*.jar | head -1)
         commitHash=$(git rev-parse --short "$GITHUB_SHA")
         artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
         mv $artifactName1 $artifactName2
-    
     - name: Upload artifact 
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v3
       with:
           name: artifacts
           path: target/*.jar
@@ -53,32 +55,28 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    # env:
-      # SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
     steps:    
-    
-    - uses: actions/checkout@v2
-    
-    - uses: actions/cache@v1
+    - name: Checkout this repo
+      uses: actions/checkout@v3
+    - name: Cache dependencies
+      uses: actions/cache@v3
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    
-    - uses: actions/download-artifact@master
+    - uses: actions/download-artifact@v3
       with:
         name: artifacts
-    
     - name: Deploy to Sandbox
       env:
-        USERNAME: ${{ secrets.USERNAME }}
-        PASSWORD: ${{ secrets.PASSWORD }}
+        USERNAME: ${{ secrets.anypoint_platform_username }}
+        PASSWORD: ${{ secrets.anypoint_platform_password }}
+        #DECRYPTION_KEY: ${{ secrets.decryption_key }}
       run: |
         artifactName=$(ls *.jar | head -1)
         mvn deploy -DmuleDeploy \
          -Dmule.artifact=$artifactName \
          -Danypoint.username="$USERNAME" \
-         -Danypoint.password="$PASSWORD" \
-         -DskipTests
+         -Danypoint.password="$PASSWORD"
+      #  -Ddecryption.key="$DECRYPTION_KEY"
