--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,3 @@
-# This workflow will build a MuleSoft project and deploy to CloudHub
-
 name: Build and Deploy to Sandbox
 
 on:
@@ -7,7 +5,6 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  #workflow_dispatch:
     
 jobs:
   build:
@@ -72,11 +69,13 @@ jobs:
       env:
         USERNAME: ${{ secrets.anypoint_platform_username }}
         PASSWORD: ${{ secrets.anypoint_platform_password }}
-        #DECRYPTION_KEY: ${{ secrets.decryption_key }}
+        DECRYPTION_KEY: ${{ secrets.decryption_key }} # only needed for secured properties
       run: |
         artifactName=$(ls *.jar | head -1)
         mvn deploy -DmuleDeploy \
          -Dmule.artifact=$artifactName \
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD"
-      #  -Ddecryption.key="$DECRYPTION_KEY"
+      #  only needed for secured properties
+      #  make sure your key is replaced here. in this example it's secure.key
+         -Dsecure.key="$DECRYPTION_KEY"
