--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,13 +69,11 @@ jobs:
       env:
         USERNAME: ${{ secrets.anypoint_platform_username }}
         PASSWORD: ${{ secrets.anypoint_platform_password }}
-        DECRYPTION_KEY: ${{ secrets.decryption_key }} # only needed for secured properties
+        DECRYPTION_KEY: ${{ secrets.decryption_key }}
       run: |
         artifactName=$(ls *.jar | head -1)
         mvn deploy -DmuleDeploy \
          -Dmule.artifact=$artifactName \
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD"
-      #  only needed for secured properties
-      #  make sure your key is replaced here. in this example it's secure.key
          -Dsecure.key="$DECRYPTION_KEY"
