changed key name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,4 +76,4 @@ jobs:
          -Dmule.artifact=$artifactName \
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD"
-         -Dsecure.key="$DECRYPTION_KEY"
+         -Ddecryption.key="$DECRYPTION_KEY"
