added secured properties field

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,5 +75,5 @@ jobs:
         mvn deploy -DmuleDeploy \
          -Dmule.artifact=$artifactName \
          -Danypoint.username="$USERNAME" \
-         -Danypoint.password="$PASSWORD"
+         -Danypoint.password="$PASSWORD" \
          -Ddecryption.key="$KEY"
