--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
     
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout this repo
@@ -24,19 +24,66 @@ jobs:
       with:
         distribution: 'zulu'
         java-version: 8
-    #- name: Add repo credentials
-      #uses: s4u/maven-settings-action@v2.6.0
-      #with:
-        #servers: |
-          #[{
-           #"id": "exchange",
-           #"username": "${{ secrets.anypoint_platform_username }}",
-           #"password": "${{ secrets.anypoint_platform_password }}"
-          #}]
-    #- name: Print effective-settings (optional)
-      #run: mvn help:effective-settings
+    - name: Set up credentials
+      env:
+        USERNAME: ${{ secrets.nexus_username }}
+        PASSWORD: ${{ secrets.nexus_password }}
+        KEY: ${{ secrets.decryption_key }}
+    - name: Add settings.xml credentials
+      uses: s4u/maven-settings-action@v2.8.0
+      with:
+        servers: |
+          [{
+           "id": "MuleRepository",
+           "username": "$USERNAME",
+           "password": "$PASSWORD"
+          }]
+        profiles: |
+          [{
+            "id": "Mule",
+            "activation": {
+              "activeByDefault": true
+            },
+            "repositories": [
+              {
+                "repository": {
+                  "id": "MuleRepository",
+                  "name": "MuleRepository",
+                  "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/",
+                  "layout": "default",
+                  "releases": {
+                    "enabled": true
+                  },
+                  "snapshots": {
+                    "enabled": true
+                  }
+                }
+              }
+            ]
+          }]
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn test -Ddecryption.key="$KEY"
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout this repo
+      uses: actions/checkout@v3
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'zulu'
+        java-version: 8
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml -DskipMunitTests
     - name: Stamp artifact file name with commit hash
       run: |
         artifactName1=$(ls target/*.jar | head -1)
@@ -72,7 +119,7 @@ jobs:
         KEY: ${{ secrets.decryption_key }}
       run: |
         artifactName=$(ls *.jar | head -1)
-        mvn deploy -DmuleDeploy \
+        mvn deploy -DskipMunitTests -DmuleDeploy \
          -Dmule.artifact=$artifactName \
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD" \
