--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,32 +24,15 @@ jobs:
       with:
         distribution: 'zulu'
         java-version: 8
-    - name: Add settings.xml
-      uses: s4u/maven-settings-action@v2.8.0
-      with:
-        servers: |
-          [{
-           "id": "MuleRepository",
-           "username": "${{ secrets.nexus_username }}",
-           "password": "${{ secrets.nexus_password }}"
-          }]
-        repositories: |
-          [{
-            "id": "MuleRepository",
-            "name": "MuleRepository",
-            "url": "https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/",
-            "layout": "default",
-            "releases": {
-              "enabled": true
-            },
-            "snapshots": {
-              "enabled": true
-            }
-          }]
     - name: Test with Maven
       env:
+        USERNAME: ${{ secrets.nexus_username }}
+        PASSWORD: ${{ secrets.nexus_password }}
         KEY: ${{ secrets.decryption_key }}
-      run: mvn test -Dsecure.key="$KEY"
+      run: mvn test --settings .maven/settings.xml \
+         -Dnexus.username="$USERNAME" \
+         -Dnexus.password="$PASSWORD" \
+         -Ddecryption.key="$KEY"
 
   build:
     needs: test
