--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,13 +26,10 @@ jobs:
         java-version: 8
     - name: Test with Maven
       env:
-        USERNAME: ${{ secrets.nexus_username }}
-        PASSWORD: ${{ secrets.nexus_password }}
-        KEY: ${{ secrets.decryption_key }}
-      run: mvn test --settings .maven/settings.xml \
-         -Dnexus.username="$USERNAME" \
-         -Dnexus.password="$PASSWORD" \
-         -Ddecryption.key="$KEY"
+        nexus.username: ${{ secrets.nexus_username }}
+        nexus.password: ${{ secrets.nexus_password }}
+        decryption.key: ${{ secrets.decryption_key }}
+      run: mvn test --settings .maven/settings.xml
 
   build:
     needs: test
