--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,11 +19,11 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'zulu'
-        java-version: 8
+    - name: Setup Maven with Java 8
+        uses: s4u/setup-maven-action@v1.7.0
+        with:
+          java-version: 8
+          maven-version: 3.8.6
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Stamp artifact file name with commit hash
@@ -54,6 +54,11 @@ jobs:
     - uses: actions/download-artifact@v3
       with:
         name: artifacts
+    - name: Setup Maven with Java 8
+        uses: s4u/setup-maven-action@v1.7.0
+        with:
+          java-version: 8
+          maven-version: 3.8.6
     - name: Deploy to Sandbox
       env:
         USERNAME: ${{ secrets.anypoint_platform_username }}
