--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,18 @@
 				<configuration>
 					<coverage>
 						<runCoverage>true</runCoverage>
+						<!-- START: MUnit coverage -->
+						<failBuild>false</failBuild>
+						<requiredApplicationCoverage>75</requiredApplicationCoverage>
+						<requiredResourceCoverage>50</requiredResourceCoverage>
+						<requiredFlowCoverage>50</requiredFlowCoverage>
+						<!-- END: MUnit coverage -->
 						<formats>
+							<!-- START: MUnit coverage -->
+							<format>console</format>
+							<format>sonar</format>
+							<format>json</format>
+							<!-- END: MUnit coverage -->
 							<format>html</format>
 						</formats>
 					</coverage>
