--- a/pom.xml
+++ b/pom.xml
@@ -71,10 +71,10 @@
 					<coverage>
 						<runCoverage>true</runCoverage>
 						<!-- START: MUnit coverage -->
-						<failBuild>false</failBuild>
-						<requiredApplicationCoverage>75</requiredApplicationCoverage>
-						<requiredResourceCoverage>50</requiredResourceCoverage>
-						<requiredFlowCoverage>50</requiredFlowCoverage>
+						<failBuild>true</failBuild>
+						<requiredApplicationCoverage>90</requiredApplicationCoverage>
+						<!-- <requiredResourceCoverage>50</requiredResourceCoverage> -->
+						<!-- <requiredFlowCoverage>50</requiredFlowCoverage> -->
 						<!-- END: MUnit coverage -->
 						<formats>
 							<!-- START: MUnit coverage -->
