--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,11 @@ jobs:
         nexus_password: ${{ secrets.nexus_password }}
         KEY: ${{ secrets.decryption_key }}
       run: mvn test --settings .maven/settings.xml -Dsecure.key="$KEY"
+    - name: Upload MUnit reports
+      uses: actions/upload-artifact@v3
+      with:
+        name: htmlreport
+        path: HTML.html
 
   build:
     needs: test
