--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>4500658a-7637-4fcf-bc7d-51d1feb28edb</groupId> <!-- make sure to add your business group ID here -->
 	<artifactId>github-actions</artifactId>
-	<version>1.0.1</version> <!-- this has to change EVERY TIME you want to re-deploy -->
+	<version>1.0.2</version> <!-- this has to change EVERY TIME you want to re-deploy -->
 	<packaging>mule-application</packaging>
 	<name>github-actions</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<app.runtime>4.4.0</app.runtime>
 		<mule.maven.plugin.version>4.1.1</mule.maven.plugin.version> <!-- use at least v4.1.0 -->
 		<env>Sandbox</env>
+		<muleVersion>4.4-java8</muleVersion>
 		<region>Cloudhub-US-East-2</region> <!-- make sure it's one of these Target Names: https://docs.mulesoft.com/cloudhub-2/ch2-architecture#regions-and-dns-records -->
 			<!-- note: free trial accounts only have access to Cloudhub-US-East-2 -->
 		<serverId>Repository</serverId> <!-- can be whatever you want, just make sure it matches the settings.xml -->
@@ -39,16 +39,23 @@
                         <target>${region}</target>
                         <server>${serverId}</server> <!-- this is where our credentials will be stored -->
                         <applicationName>${project.artifactId}</applicationName>
+						<muleVersion>${muleVersion}</muleVersion>
                         <replicas>1</replicas>
                         <vCores>0.1</vCores>
                         <deploymentSettings>
                             <generateDefaultPublicUrl>true</generateDefaultPublicUrl>
                         </deploymentSettings>
                         <!-- Start: SECURED PROPERTIES CI/CD -->
-						<properties>
+						<secureProperties>
 							<secure.key>${decryption.key}</secure.key>
-						</properties>
+						</secureProperties>
 						<!-- End: SECURED PROPERTIES CI/CD -->
+
+						<!-- use `properties` for non-secured values -->
+						<!-- <properties>
+							<env>dev</env>
+						</properties> -->
+						
                     </cloudhub2Deployment>
                 </configuration>
             </plugin>
